Fixed build on CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ build:
     paths: 
       - ./public/
   script:
-    - sh $APP_PATH/install.sh
+    - sh $APP_PATH/run.sh
    
 # test1:
 #   stage: test
